// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GiftGrid /> debe de mostar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__flip"
  >
    One Punch
  </h3>
  <div
    className="card-grid  animate__animated animate__fadeInDownBig"
  >
    <GiftGridItem
      id="ABC"
      key="ABC"
      title="Cualquier Cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GiftGrid /> debe mostrar el componente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__flip"
  >
    One Punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid  animate__animated animate__fadeInDownBig"
  />
</Fragment>
`;
